force-app/main/default/objects/TransformAgromTest__c/TransformAgromTest__c.object-meta.xml
<CustomObject>
    <label>TransformAgromTest</label>
    <nameField>
        <label>TransformAgromTest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TransformAgromTests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>