force-app/main/default/objects/TransformAgromTest__c/fields/CheckboxTest__c.field-meta.xml
<CustomField>
    <fullName>CheckboxTest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CheckboxTest</label>
    <type>Checkbox</type>
</CustomField>