force-app/main/default/objects/TransformAgromTest__c/fields/DateTimeTest__c.field-meta.xml
<CustomField>
    <fullName>DateTimeTest__c</fullName>
    <label>DateTimeTest</label>
    <type>DateTime</type>
</CustomField>