force-app/main/default/objects/TransformAgromTest__c/fields/MyText__c.field-meta.xml
<CustomField>
    <fullName>MyText__c</fullName>
    <label>MyText</label>
    <length>25</length>
    <type>Text</type>
</CustomField>