force-app/main/default/objects/TransformAgromTest__c/fields/NumTest__c.field-meta.xml
<CustomField>
    <fullName>NumTest__c</fullName>
    <label>NumTest</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>