force-app/main/default/objects/TransformAgromTest__c/fields/PhoneTest__c.field-meta.xml
<CustomField>
    <fullName>PhoneTest__c</fullName>
    <label>PhoneTest</label>
    <type>Phone</type>
</CustomField>