force-app/main/default/objects/TransformAgromTest__c/fields/TimeTest__c.field-meta.xml
<CustomField>
    <fullName>TimeTest__c</fullName>
    <label>TimeTest</label>
    <type>Time</type>
</CustomField>